# app/resources/health.py
@@ -1,6 +1,7 @@
 import falcon
 from .ann import ANNResource
 import json
+import os
 
 
 class ANNHealthcheckResource(object):
@@ -20,4 +21,28 @@ class HealthcheckResource(object):
 
     def on_get(self, req, resp):
         resp.body = json.dumps(self.names)
+        resp.status = falcon.HTTP_200
+
+
+class TmpSpaceResource(object):
+
+    def on_get(self, req, resp):
+        """
+        Returns: Size of /tmp in mb
+
+        """
+        def get_size(start_path='/tmp'):
+            total_size = 0
+            for dirpath, dirnames, filenames in os.walk(start_path):
+                for f in filenames:
+                    try:
+                        fp = os.path.join(dirpath, f)
+                        total_size += os.path.getsize(fp)
+                    except FileNotFoundError:
+                        pass
+                    except:
+                        pass
+            return total_size
+
+        resp.body = int(get_size('/tmp') / 1e6)
         resp.status = falcon.HTTP_200
